--- a/web/src/app/pages/principal/add-subject/add-subject.component.html
+++ b/web/src/app/pages/principal/add-subject/add-subject.component.html
@@ -1,3 +1,4 @@
+<app-alert [isHidden]=isAlertHidden message="{{alertMessage}}" type="{{alertType}}" (close)="handleAlertClose($event)"></app-alert>
 <div class="mx-2 mt-6 md:mx-5 bg-white p-3 rounded-lg shadow-md overflow-x-auto sm:p-6 xl:p-8">
     <button (click)="onBack()" class="mb-3 text-gray-500 hover:text-gray-700 focus:outline-none focus:text-gray-700">
         <i class="fa-solid fa-circle-arrow-left"></i> Back
@@ -13,15 +14,17 @@
             <div class="flex flex-row">
                 <div class="flex flex-col w-full">
                     <label for="name" class="text-gray-700">Name</label>
-                    <input type="text" name="name" id="name"
+                    <input type="text" [(ngModel)]="subjectName" name="name" id="name"
                         class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
+                    <p class="text-red-600">{{subjectNameError}}</p>
                 </div>
             </div>
             <div class="flex flex-row mt-2">
                 <div class="flex flex-col w-full">
                     <label for="description" class="text-gray-700">Description</label>
-                    <textarea name="description" id="description" rows="3"
+                    <textarea name="description" [(ngModel)]="subjectDesc" id="description" rows="3"
                         class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent"></textarea>
+                    <p class="text-red-600">{{subjectDescError}}</p>
                 </div>
             </div>
         </div>
