--- a/web/src/app/pages/principal/edit-subject/edit-subject.component.html
+++ b/web/src/app/pages/principal/edit-subject/edit-subject.component.html
@@ -1,1 +1,35 @@
-<p>edit-subject works!</p>
+<app-alert [isHidden]=isAlertHidden message="{{alertMessage}}" type="{{alertType}}" (close)="handleAlertClose($event)"></app-alert>
+<div class="mx-2 mt-6 md:mx-5 bg-white p-3 rounded-lg shadow-md overflow-x-auto sm:p-6 xl:p-8">
+    <button (click)="onBack()" class="mb-3 text-gray-500 hover:text-gray-700 focus:outline-none focus:text-gray-700">
+        <i class="fa-solid fa-circle-arrow-left"></i> Back
+    </button>
+    <div class="mb-4 flex items-center justify-between">
+        <div>
+            <h3 class="text-xl font-bold text-gray-900 mb-2">Add Subject</h3>
+            <span class="text-base font-normal text-gray-500">You can add a new subject into school from here.</span>
+        </div>
+    </div>
+    <form (submit)="onSubmit()">
+        <div class="flex flex-col">
+            <div class="flex flex-row">
+                <div class="flex flex-col w-full">
+                    <label for="name" class="text-gray-700">Name</label>
+                    <input type="text" [(ngModel)]="subjectName" name="name" id="name"
+                        class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
+                    <p class="text-red-600">{{subjectNameError}}</p>
+                </div>
+            </div>
+            <div class="flex flex-row mt-2">
+                <div class="flex flex-col w-full">
+                    <label for="description" class="text-gray-700">Description</label>
+                    <textarea name="description" [(ngModel)]="subjectDesc" id="description" rows="3"
+                        class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent"></textarea>
+                    <p class="text-red-600">{{subjectDescError}}</p>
+                </div>
+            </div>
+        </div>
+        <div class="w-full text-center my-2">
+            <button type="submit" class="px-4 py-2 rounded-md btn-primary">Add Subject</button>
+        </div>
+    </form>
+</div>
