--- a/web/src/app/pages/principal/add-teacher/add-teacher.component.html
+++ b/web/src/app/pages/principal/add-teacher/add-teacher.component.html
@@ -8,7 +8,7 @@
             <span class="text-base font-normal text-gray-500">You can add a new teacher into school from here.</span>
         </div>
     </div>
-    <form (submit)="onSubmitAdd()" *ngIf="openForm === 'add'">
+    <form (submit)="onSubmit()">
         <div class="flex flex-col">
             <div class="flex flex-row">
                 <div class="flex flex-col w-1/2">
@@ -32,24 +32,6 @@
         </div>
         <div class="w-full text-center my-2">
             <button type="submit" class="px-4 py-2 rounded-md btn-primary">Add Teacher</button>
-        </div>
-    </form>
-    <form (submit)="onSubmitVerify()" *ngIf="openForm === 'verify'">
-        <div class="flex flex-col">
-            <span class="text-center text-base font-normal text-gray-500">Email has been sent to teacher's email, enter code below and complete this, but if he has not received email then click send email. 
-                <button class="text-indigo-500 underline hover:text-indigo-600">Send Email</button>
-            </span>
-            <div class="flex flex-row">
-                <div class="flex flex-col w-full">
-                    <label for="name" class="text-gray-700">Code</label>
-                    <input type="text" name="name" id="name"
-                        class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
-                </div>
-            </div>
-        </div>
-        <div class="w-full text-center my-2">
-            <button type="submit" class="px-4 py-2 rounded-md btn-primary">Verify</button>
-            <button (click)="cancel()" class="ml-2 px-4 py-2 rounded-md btn-secondary">Cancel</button>
         </div>
     </form>
 </div>
