--- a/web/src/app/pages/principal/edit-subject/edit-subject.component.html
+++ b/web/src/app/pages/principal/edit-subject/edit-subject.component.html
@@ -5,8 +5,7 @@
     </button>
     <div class="mb-4 flex items-center justify-between">
         <div>
-            <h3 class="text-xl font-bold text-gray-900 mb-2">Add Subject</h3>
-            <span class="text-base font-normal text-gray-500">You can add a new subject into school from here.</span>
+            <h3 class="text-xl font-bold text-gray-900 mb-2">Edit Subject</h3>
         </div>
     </div>
     <form (submit)="onSubmit()">
@@ -29,7 +28,7 @@
             </div>
         </div>
         <div class="w-full text-center my-2">
-            <button type="submit" class="px-4 py-2 rounded-md btn-primary">Add Subject</button>
+            <button type="submit" class="px-4 py-2 rounded-md btn-primary">Update Subject</button>
         </div>
     </form>
 </div>
