--- a/web/src/app/pages/principal/principal-sidebar/principal-sidebar.component.html
+++ b/web/src/app/pages/principal/principal-sidebar/principal-sidebar.component.html
@@ -34,6 +34,15 @@
                      <span class="ml-3 flex-1 whitespace-nowrap">Classes</span>
                   </a>
                </li>
+               <li>
+                  <a routerLink="/principal/teachers" (click)="changeHeading('Teachers')"
+                     class="{{heading==='Teachers'? 'bg-indigo-500 hover:bg-indigo-600 text-white':'bg-white hover:bg-gray-100 text-gray-500 hover:text-gray-900'}} text-base font-normal rounded-lg flex items-center p-2 group">
+                     <div class="w-6 h-6 transition duration-75">
+                        <i class="fa-solid fa-people-group"></i>
+                     </div>
+                     <span class="ml-3 flex-1 whitespace-nowrap">Students</span>
+                  </a>
+               </li>
                <li class="text-gray-500 px-2">Staff</li>
                <li>
                   <a routerLink="/principal/teachers" (click)="changeHeading('Teachers')"
