--- a/web/src/app/pages/principal/add-class/add-class.component.html
+++ b/web/src/app/pages/principal/add-class/add-class.component.html
@@ -4,8 +4,8 @@
     </button>
     <div class="mb-4 flex items-center justify-between">
         <div>
-            <h3 class="text-xl font-bold text-gray-900 mb-2">Add Class</h3>
-            <span class="text-base font-normal text-gray-500">You can add a new class into school from here.</span>
+            <h3 class="text-xl font-bold text-gray-900 mb-2">Add Student</h3>
+            <span class="text-base font-normal text-gray-500">You can add a new student into school from here.</span>
         </div>
     </div>
     <form (submit)="onSubmit()">
