--- a/web/src/app/pages/principal/add-timetable/add-timetable.component.html
+++ b/web/src/app/pages/principal/add-timetable/add-timetable.component.html
@@ -14,49 +14,178 @@
             <div class="flex flex-row">
                 <div class="flex flex-col w-1/2">
                     <label for="name" class="text-gray-700">Name</label>
-                    <input type="text" name="name" id="name"
+                    <input type="text" name="name"
                         class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
                 </div>
                 <!-- select class -->
                 <div class="flex flex-col w-1/2 ml-2">
                     <label for="class" class="text-gray-700">Class</label>
-                    <select name="class" id="class"
+                    <select name="class"
                         class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
                         <option *ngFor="let class of classes" [value]="class">{{class}}</option>
                     </select>
                 </div>
             </div>
             <span class="text-sm text-gray-500 mt-2">Add some time periods of class.</span>
-            <div class="flex flex-row mt-2">
+            <div class="flex flex-row">
                 <div class="flex flex-col w-1/2">
                     <label for="start_time" class="text-gray-700">Start Time</label>
-                    <input type="time" name="start_time" id="start_time"
+                    <input type="time" name="start_time"
                         class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
                 </div>
                 <div class="flex flex-col w-1/2 ml-2">
-                    <label for="end_time" class="text-gray-700">End Date</label>
-                    <input type="time" name="end_time" id="end_time"
+                    <label for="end_time" class="text-gray-700">End Time</label>
+                    <input type="time" name="end_time"
                         class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
                 </div>
             </div>
         </div>
-        <!-- select subjects -->
+        <!-- checkbox for all days -->
         <div class="flex flex-row mt-2">
-            <div class="flex flex-col w-1/2">
-                <label for="subjects" class="text-gray-700">Subjects</label>
-                <select name="subjects" id="subjects"
-                    class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
-                    <option *ngFor="let subject of subjects" [value]="subject">{{subject}}</option>
-                </select>
-            </div>
-            <div class="flex flex-col w-1/2 ml-2">
-                <label for="subjects" class="text-gray-700">Subjects</label>
-                <select name="subjects" id="subjects"
-                    class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
-                    <option *ngFor="let subject of subjects" [value]="subject">{{subject}}</option>
-                </select>
+            <div class="flex flex-col w-full">
+                <label for="subject" class="text-gray-700">Days <span class="text-sm">(for you want)</span></label>
+                <div class="grid grid-cols-5">
+                    <div class="flex flex-row items-center">
+                        <input type="checkbox" name="monday" class="mr-2">
+                        <label for="monday" class="text-gray-700">Monday</label>
+                    </div>
+                    <div class="flex flex-row items-center">
+                        <input type="checkbox" name="tuesday" class="mr-2">
+                        <label for="tuesday" class="text-gray-700">Tuesday</label>
+                    </div>
+                    <div class="flex flex-row items-center">
+                        <input type="checkbox" name="wednesday" class="mr-2">
+                        <label for="wednesday" class="text-gray-700">Wednesday</label>
+                    </div>
+                    <div class="flex flex-row items-center">
+                        <input type="checkbox" name="thursday" class="mr-2">
+                        <label for="thursday" class="text-gray-700">Thursday</label>
+                    </div>
+                    <div class="flex flex-row items-center">
+                        <input type="checkbox" name="friday" class="mr-2">
+                        <label for="friday" class="text-gray-700">Friday</label>
+                    </div>
+                    <div class="flex flex-row items-center">
+                        <input type="checkbox" name="saturday" class="mr-2">
+                        <label for="saturday" class="text-gray-700">Saturday</label>
+                    </div>
+                    <div class="flex flex-row items-center">
+                        <input type="checkbox" name="sunday" class="mr-2">
+                        <label for="sunday" class="text-gray-700">Sunday</label>
+                    </div>
+                </div>
             </div>
         </div>
+        <!-- button to add period -->
+        <div class="flex flex-row gap-2 mt-2">
+            <div class="flex flex-col grow">
+                <label for="subject" class="text-gray-700">Subject</label>
+                <select name="subject"
+                    class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
+                    <option *ngFor="let subject of subjects" [value]="subject">{{subject}}</option>
+                </select>
+            </div>
+            <div class="flex flex-col grow">
+                <label for="teacher" class="text-gray-700">Teacher</label>
+                <select name="teacher"
+                    class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
+                    <option *ngFor="let teacher of teachers" [value]="teacher">{{teacher}}</option>
+                </select>
+            </div>
+            <!-- button to add period -->
+            <div class="text-center my-auto mb-[0.10rem]">
+                <button type="button" class=" btn-success rounded px-2 py-1">
+                    <i class="fa-solid fa-plus"></i> Add
+                </button>
+            </div>
+        </div>
+
+        <!-- table to show periods -->
+        <div class="flex flex-col mt-2">
+            <div class="overflow-x-auto rounded-lg">
+                <div class="align-middle inline-block min-w-full">
+                    <div class="shadow overflow-hidden sm:rounded-lg">
+                        <table class="min-w-full divide-y divide-gray-200">
+                            <thead class="bg-gray-50">
+                                <tr>
+                                    <th scope="col"
+                                        class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                        Time
+                                    </th>
+                                    <th scope="col"
+                                        class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                        Monday
+                                    </th>
+                                    <th scope="col"
+                                        class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                        Tuesday
+                                    </th>
+                                    <th scope="col"
+                                        class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                        Wednesday
+                                    </th>
+                                    <th scope="col"
+                                        class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                        Thursday
+                                    </th>
+                                    <th scope="col"
+                                        class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                        Friday
+                                    </th>
+                                    <th scope="col"
+                                        class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                        Saturday
+                                    </th>
+                                    <th scope="col"
+                                        class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                        Sunday
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody class="bg-white">
+                                <ng-container *ngIf="timeTable.length > 0;">
+                                    <tr *ngFor="let period of timeTable;">
+                                        <td class="p-4 whitespace-nowrap text-sm font-normal text-gray-900">
+                                            {{ period.time }}
+                                        </td>
+                                        <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                            {{ period.monday }}
+                                        </td>
+                                        <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                            {{ period.tuesday }}
+                                        </td>
+                                        <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                            {{ period.wednesday }}
+                                        </td>
+                                        <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                            {{ period.thursday }}
+                                        </td>
+                                        <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                            {{ period.friday }}
+                                        </td>
+                                        <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                            {{ period.saturday }}
+                                        </td>
+                                        <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                            {{ period.sunday }}
+                                        </td>
+                                    </tr>
+                                </ng-container>
+                                <ng-container *ngIf="timeTable.length === 0;">
+                                    <tr>
+                                        <td colspan="8"
+                                            class="p-4 text-center whitespace-nowrap text-sm font-normal text-gray-900">
+                                            No timeTable found
+                                        </td>
+                                    </tr>
+                                </ng-container>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
         <div class="w-full text-center my-2">
             <button type="submit" class="px-4 py-2 rounded-md btn-primary">Add Time Table</button>
