--- a/web/src/app/pages/principal/principal-sidebar/principal-sidebar.component.html
+++ b/web/src/app/pages/principal/principal-sidebar/principal-sidebar.component.html
@@ -8,12 +8,10 @@
                <li>
                   <a routerLink="/principal/dashboard" (click)="changeHeading('Dashboard')"
                      class="{{heading==='Dashboard'? 'bg-indigo-500 hover:bg-indigo-600 text-white':'bg-white hover:bg-gray-100 text-gray-500 hover:text-gray-900'}} text-base font-normal rounded-lg flex items-center p-2 group">
-                     <svg class="w-6 h-6 transition duration-75" fill="currentColor" viewBox="0 0 20 20"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path d="M2 10a8 8 0 018-8v8h8a8 8 0 11-16 0z"></path>
-                        <path d="M12 2.252A8.014 8.014 0 0117.748 8H12V2.252z"></path>
-                     </svg>
-                     <span class="ml-3">Dashboard</span>
+                     <div class="w-6 h-6 transition duration-75">
+                        <i class="fa-solid fa-chart-pie"></i>
+                     </div>
+                     <span class="ml-3 flex-1 whitespace-nowrap">Dashboard</span>
                   </a>
                </li>
                <li>
@@ -35,8 +33,8 @@
                   </a>
                </li>
                <li>
-                  <a routerLink="/principal/teachers" (click)="changeHeading('Teachers')"
-                     class="{{heading==='Teachers'? 'bg-indigo-500 hover:bg-indigo-600 text-white':'bg-white hover:bg-gray-100 text-gray-500 hover:text-gray-900'}} text-base font-normal rounded-lg flex items-center p-2 group">
+                  <a routerLink="/principal/students" (click)="changeHeading('Students')"
+                     class="{{heading==='Students'? 'bg-indigo-500 hover:bg-indigo-600 text-white':'bg-white hover:bg-gray-100 text-gray-500 hover:text-gray-900'}} text-base font-normal rounded-lg flex items-center p-2 group">
                      <div class="w-6 h-6 transition duration-75">
                         <i class="fa-solid fa-people-group"></i>
                      </div>
