--- a/web/src/app/pages/principal/timetable/timetable.component.html
+++ b/web/src/app/pages/principal/timetable/timetable.component.html
@@ -12,7 +12,7 @@
         </div>
     </div>
     <div class="flex justify-between mt-8">
-        <div>
+        <div class="mb-2">
             <label for="class" class="text-gray-700 mr-2">Select Class: </label>
             <select
                 class="border rounded-md px-2 min-w-[100px] py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
@@ -29,7 +29,7 @@
             </button>
         </div>
     </div>
-    <div class="flex flex-col mt-2" *ngIf="classes.length > 0 && selectedClass !== ''">
+    <div class="flex flex-col mt-2" *ngIf="classes.length > 0 && selectedClass !== '' && timeTable.length > 0">
         <div class="overflow-x-auto rounded-lg">
             <div class="align-middle inline-block min-w-full">
                 <div class="shadow overflow-hidden sm:rounded-lg">
@@ -113,7 +113,7 @@
             </div>
         </div>
     </div>
-    <div class="text-center my-2" *ngIf="classes.length === 0 || selectedClass === ''">
+    <div class="text-center my-2" *ngIf="classes.length === 0 || selectedClass === '' || timeTable.length === 0">
         <span>No time table found</span>
     </div>
 </div>
