--- a/web/src/app/pages/principal/add-clerk/add-clerk.component.html
+++ b/web/src/app/pages/principal/add-clerk/add-clerk.component.html
@@ -13,20 +13,23 @@
             <div class="flex flex-row">
                 <div class="flex flex-col w-1/2">
                     <label for="name" class="text-gray-700">Name</label>
-                    <input type="text" name="name" id="name"
+                    <input type="text" name="name" id="name" [(ngModel)]="name"
                         class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
+                    <p class="text-red-600">{{nameError}}</p>
                 </div>
                 <div class="flex flex-col w-1/2 ml-2">
                     <label for="email" class="text-gray-700">Email</label>
-                    <input type="text" name="email" id="email"
+                    <input type="text" name="email" id="email" [(ngModel)]="email"
                         class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
+                    <p class="text-red-600">{{emailError}}</p>
                 </div>
             </div>
             <div class="flex flex-row mt-2">
                 <div class="flex flex-col w-full">
                     <label for="description" class="text-gray-700">Description</label>
-                    <textarea name="description" id="description" rows="3"
+                    <textarea name="description" id="description" rows="3" [(ngModel)]="description"
                         class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent"></textarea>
+                    <p class="text-red-600">{{descriptionError}}</p>
                 </div>
             </div>
         </div>
