--- a/web/src/app/pages/principal/add-student/add-student.component.html
+++ b/web/src/app/pages/principal/add-student/add-student.component.html
@@ -44,8 +44,8 @@
                     <select name="class" id="class" [(ngModel)]="selectedClass"
                         class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
                         <option *ngFor="let class of classes;" [ngValue]="class">{{class}}</option>
-                        <p class="text-red-600">{{selectedClass}}</p>
                     </select>
+                    <p class="text-red-600">{{selectedClassError}}</p>
                 </div>
                 <div class="flex flex-col w-1/2 ml-2">
                     <label for="rollNo" class="text-gray-700">Roll No</label>
