--- a/web/src/app/pages/principal/add-timetable/add-timetable.component.html
+++ b/web/src/app/pages/principal/add-timetable/add-timetable.component.html
@@ -14,29 +14,35 @@
             <div class="flex flex-row">
                 <div class="flex flex-col w-1/2">
                     <label for="name" class="text-gray-700">Name</label>
-                    <input type="text" name="name"
+                    <input type="text" name="name" [(ngModel)]="name"
                         class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
+                    <p class="text-red-600">{{nameError}}</p>
                 </div>
                 <!-- select class -->
                 <div class="flex flex-col w-1/2 ml-2">
                     <label for="class" class="text-gray-700">Class</label>
-                    <select name="class"
+                    <select name="class" [(ngModel)]="selectedClass"
                         class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
                         <option *ngFor="let class of classes" [value]="class">{{class}}</option>
                     </select>
+                    <p class="text-red-600">{{selectedClassError}}</p>
                 </div>
             </div>
             <span class="text-sm text-gray-500 mt-2">Add some time periods of class.</span>
-            <div class="flex flex-row">
+            <div class="flex flex-row gap-2">
                 <div class="flex flex-col w-1/2">
-                    <label for="start_time" class="text-gray-700">Start Time</label>
-                    <input type="time" name="start_time"
+                    <label for="periodNo" class="text-gray-700">Period No <span class="text-xs">(Unique)</span></label>
+                    <input type="text" name="periodNo" [(ngModel)]="periodNo"
                         class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
+                    <p class="text-red-600">{{periodNoError}}</p>
                 </div>
-                <div class="flex flex-col w-1/2 ml-2">
-                    <label for="end_time" class="text-gray-700">End Time</label>
-                    <input type="time" name="end_time"
+                <div class="flex flex-col w-1/2">
+                    <label for="subject" class="text-gray-700">Subject</label>
+                    <select name="subject" [(ngModel)]="selectedSubject"
                         class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
+                        <option *ngFor="let subject of subjects" [value]="subject">{{subject}}</option>
+                    </select>
+                    <p class="text-red-600">{{subjectError}}</p>
                 </div>
             </div>
         </div>
@@ -46,54 +52,53 @@
                 <label for="subject" class="text-gray-700">Days <span class="text-sm">(for you want)</span></label>
                 <div class="grid grid-cols-5">
                     <div class="flex flex-row items-center">
-                        <input type="checkbox" name="monday" class="mr-2">
+                        <input type="checkbox" name="monday" id="monday" [(ngModel)]="monday" class="mr-2">
                         <label for="monday" class="text-gray-700">Monday</label>
                     </div>
                     <div class="flex flex-row items-center">
-                        <input type="checkbox" name="tuesday" class="mr-2">
+                        <input type="checkbox" name="tuesday" id="tuesday" [(ngModel)]="tuesday" class="mr-2">
                         <label for="tuesday" class="text-gray-700">Tuesday</label>
                     </div>
                     <div class="flex flex-row items-center">
-                        <input type="checkbox" name="wednesday" class="mr-2">
+                        <input type="checkbox" name="wednesday" id="wednesday" [(ngModel)]="wednesday" class="mr-2">
                         <label for="wednesday" class="text-gray-700">Wednesday</label>
                     </div>
                     <div class="flex flex-row items-center">
-                        <input type="checkbox" name="thursday" class="mr-2">
+                        <input type="checkbox" name="thursday" id="thursday" [(ngModel)]="thursday" class="mr-2">
                         <label for="thursday" class="text-gray-700">Thursday</label>
                     </div>
                     <div class="flex flex-row items-center">
-                        <input type="checkbox" name="friday" class="mr-2">
+                        <input type="checkbox" name="friday" id="friday" [(ngModel)]="friday" class="mr-2">
                         <label for="friday" class="text-gray-700">Friday</label>
                     </div>
                     <div class="flex flex-row items-center">
-                        <input type="checkbox" name="saturday" class="mr-2">
+                        <input type="checkbox" name="saturday" id="saturday" [(ngModel)]="saturday" class="mr-2">
                         <label for="saturday" class="text-gray-700">Saturday</label>
                     </div>
                     <div class="flex flex-row items-center">
-                        <input type="checkbox" name="sunday" class="mr-2">
+                        <input type="checkbox" name="sunday" id="sunday" [(ngModel)]="sunday" class="mr-2">
                         <label for="sunday" class="text-gray-700">Sunday</label>
                     </div>
                 </div>
+                <p class="text-red-600">{{daysError}}</p>
             </div>
         </div>
         <!-- button to add period -->
         <div class="flex flex-row gap-2 mt-2">
             <div class="flex flex-col grow">
-                <label for="subject" class="text-gray-700">Subject</label>
-                <select name="subject"
+                <label for="start_time" class="text-gray-700">Start Time</label>
+                <input type="time" name="start_time" [(ngModel)]="startTime"
                     class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
-                    <option *ngFor="let subject of subjects" [value]="subject">{{subject}}</option>
-                </select>
+                <p class="text-red-600">{{startTimeError}}</p>
             </div>
             <div class="flex flex-col grow">
-                <label for="teacher" class="text-gray-700">Teacher</label>
-                <select name="teacher"
+                <label for="end_time" class="text-gray-700">End Time</label>
+                <input type="time" name="end_time" [(ngModel)]="endTime"
                     class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
-                    <option *ngFor="let teacher of teachers" [value]="teacher">{{teacher}}</option>
-                </select>
+                <p class="text-red-600">{{endTimeError}}</p>
             </div>
             <!-- button to add period -->
-            <div class="text-center my-auto mb-[0.10rem]">
+            <div (click)="onAdd()" class="text-center my-auto mb-[0.10rem]">
                 <button type="button" class=" btn-success rounded px-2 py-1">
                     <i class="fa-solid fa-plus"></i> Add
                 </button>
@@ -110,7 +115,7 @@
                                 <tr>
                                     <th scope="col"
                                         class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                        Time
+                                        No
                                     </th>
                                     <th scope="col"
                                         class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
@@ -140,40 +145,78 @@
                                         class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                                         Sunday
                                     </th>
+                                    <th scope="col"
+                                        class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                        Action
+                                    </th>
                                 </tr>
                             </thead>
                             <tbody class="bg-white">
                                 <ng-container *ngIf="timeTable.length > 0;">
-                                    <tr *ngFor="let period of timeTable;">
+                                    <tr *ngFor="let period of timeTable; let i = index;">
                                         <td class="p-4 whitespace-nowrap text-sm font-normal text-gray-900">
-                                            {{ period.time }}
+                                            {{ period.periodNo }}
                                         </td>
                                         <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
-                                            {{ period.monday }}
+                                            <div>
+                                                {{ period.monday? period.monday[0]:' -- ' }}
+                                            </div>
+                                            <span class="text-xs text-gray-800">{{ period.monday?
+                                                '('+period.monday[1]+' - '+period.monday[2]+')':'' }}</span>
                                         </td>
                                         <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
-                                            {{ period.tuesday }}
+                                            <div>
+                                                {{ period.tuesday? period.tuesday[0]:' -- ' }}
+                                            </div>
+                                            <span class="text-xs text-gray-800">{{ period.tuesday?
+                                                '('+period.tuesday[1]+' - '+period.tuesday[2]+')':'' }}</span>
                                         </td>
                                         <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
-                                            {{ period.wednesday }}
+                                            <div>
+                                                {{ period.wednesday? period.wednesday[0]:' -- ' }}
+                                            </div>
+                                            <span class="text-xs text-gray-800">{{ period.wednesday?
+                                                '('+period.wednesday[1]+' - '+period.wednesday[2]+')':'' }}</span>
                                         </td>
                                         <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
-                                            {{ period.thursday }}
+                                            <div>
+                                                {{ period.thursday? period.thursday[0]:' -- ' }}
+                                            </div>
+                                            <span class="text-xs text-gray-800">{{ period.thursday?
+                                                '('+period.thursday[1]+' - '+period.thursday[2]+')':'' }}</span>
                                         </td>
                                         <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
-                                            {{ period.friday }}
+                                            <div>
+                                                {{ period.friday? period.friday[0]:' -- ' }}
+                                            </div>
+                                            <span class="text-xs text-gray-800">{{ period.friday?
+                                                '('+period.friday[1]+' - '+period.friday[2]+')':'' }}</span>
                                         </td>
                                         <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
-                                            {{ period.saturday }}
+                                            <div>
+                                                {{ period.saturday? period.saturday[0]:' -- ' }}
+                                            </div>
+                                            <span class="text-xs text-gray-800">{{ period.saturday?
+                                                '('+period.saturday[1]+' - '+period.saturday[2]+')':'' }}</span>
                                         </td>
                                         <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
-                                            {{ period.sunday }}
+                                            <div>
+                                                {{ period.sunday? period.sunday[0]:' -- ' }}
+                                            </div>
+                                            <span class="text-xs text-gray-800">{{ period.sunday?
+                                                '('+period.sunday[1]+' - '+period.sunday[2]+')':'' }}</span>
+                                        </td>
+                                        <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                            <button (click)="removeTimeTable(i)" type="button"
+                                                class="rounded px-2 py-1 hover:text-gray-800">
+                                                <i class="fa-solid fa-trash"></i>
+                                            </button>
                                         </td>
                                     </tr>
                                 </ng-container>
                                 <ng-container *ngIf="timeTable.length === 0;">
                                     <tr>
-                                        <td colspan="8"
+                                        <td colspan="9"
                                             class="p-4 text-center whitespace-nowrap text-sm font-normal text-gray-900">
                                             No timeTable found
                                         </td>
