--- a/web/src/app/pages/principal/attendances/attendances.component.html
+++ b/web/src/app/pages/principal/attendances/attendances.component.html
@@ -1,1 +1,100 @@
-<p>attendances works!</p>
+<!-- create table in tailwind css -->
+<div class="bg-white mx-4 mt-6 shadow rounded-lg p-4 sm:p-6 xl:p-8 ">
+    <div class="mb-4 flex flex-col md:flex-row gap-2 md:justify-between">
+        <div>
+            <h3 class="text-xl font-bold text-gray-900 mb-2">Attendances</h3>
+            <span class="text-base font-normal text-gray-500">This is a list of our staff attendance.</span>
+        </div>
+        <div class="self-end my-2 md:my-auto">
+            <a routerLink="add" class="bg-indigo-500 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">
+                <i class="fa-solid fa-plus"></i> Add new attendance
+            </a>
+        </div>
+    </div>
+    <div class="flex flex-col mt-8">
+        <div class="overflow-x-auto rounded-lg">
+            <div class="align-middle inline-block min-w-full">
+                <div class="shadow overflow-hidden sm:rounded-lg">
+                    <table class="min-w-full divide-y divide-gray-200">
+                        <thead class="bg-gray-50">
+                            <tr>
+                                <th scope="col"
+                                    class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                    No
+                                </th>
+                                <th scope="col"
+                                    class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                    Presents
+                                </th>
+                                <th scope="col"
+                                    class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                    Absences
+                                </th>
+                                <th scope="col"
+                                    class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                    Leaves
+                                </th>
+                                <th scope="col"
+                                    class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                    Total
+                                </th>
+                                <th scope="col"
+                                    class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                    Date
+                                </th>
+                                <th scope="col"
+                                    class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                    Actions
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody class="bg-white">
+                            <ng-container *ngIf="attendances.length > 0;">
+                                <tr *ngFor="let attendance of attendances; let i = index">
+                                    <td class="p-4 whitespace-nowrap text-sm font-normal text-gray-900">
+                                        {{ i + 1 }}
+                                    </td>
+                                    <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                        {{ attendance.presents }}
+                                    </td>
+                                    <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                        {{ attendance.absences }}
+                                    </td>
+                                    <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                        {{ attendance.leaves }}
+                                    </td>
+                                    <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                        {{ attendance.total }}
+                                    </td>
+                                    <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                        {{ attendance.date }}
+                                    </td>
+                                    <!-- view and accept button -->
+                                    <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                        <button class="text-gray-400 hover:text-indigo-500 font-bold py-2 px-4 rounded">
+                                            <i class="fa-solid fa-eye"></i>
+                                        </button>
+                                        <button class="text-gray-400 hover:text-green-500 font-bold py-2 px-4 rounded">
+                                            <i class="fa-solid fa-check"></i>
+                                        </button>
+                                        <button class="text-gray-400 hover:text-red-500 font-bold py-2 px-4 rounded">
+                                            <i class="fa-solid fa-xmark"></i>
+                                        </button>
+                                    </td>
+                                </tr>
+                            </ng-container>
+                            <ng-container *ngIf="attendances.length === 0;">
+                                <tr>
+                                    <td colspan="6"
+                                        class="p-4 text-center whitespace-nowrap text-sm font-normal text-gray-900">
+                                        No attendance found
+                                    </td>
+                                </tr>
+                            </ng-container>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
