abhi edit-class wala complete nhi ha

--- a/web/src/app/pages/principal/classes/classes.component.html
+++ b/web/src/app/pages/principal/classes/classes.component.html
@@ -96,7 +96,7 @@
                                             <i class="fa-solid fa-eye"></i>
                                         </button>
                                         <button class="text-gray-400 hover:text-green-500 font-bold py-2 px-4 rounded">
-                                            <i class="fa-solid fa-edit"></i>
+                                            <i class="fa-solid fa-edit" routerLink="edit/{{class._id}}"></i>
                                         </button>
                                         <button (click)="deleteClass( class._id )"
                                             class="text-gray-400 hover:text-red-500 font-bold py-2 px-4 rounded">
